--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
     <div id="listItems">
 
     </div>
-    <input class="newItemInput" type="text" placeholder="Add an item..."/>
+    <input id="newItemInput" type="text" placeholder="Add an item..."/>
     <button>+</button>
   </body>
 </html>
